# fridagram

./: pyproject.toml
cli/: fridagram.py
fridagram/: __init__.py  __main__.py  fridagram.py
