[tool.poetry]
name = "fridagram"
version = "0.1.0"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setproctitle = "^1.3.2"
requests = "^2.28.2"

[tool.poetry.scripts]
fridagram = "cli.fridagram:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
