[tool.poetry]
name = "fridagram"
version = "0.1.15"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setproctitle = "^1.3.2"
requests = "^2.28.2"
toml = "^0.10.2"

[tool.poetry.scripts]
fridstart = "fridagram.fridagram:start"

[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
