[tool.poetry]
name = "fridagram"
version = "0.1.16"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
toml = "^0.10.2"
setproctitle = "^1.3.4"

[tool.poetry.scripts]
fridstart = "fridagram.fridagram:start"

[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
